# RNAFlow

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup_ribonn.sh
configs/: optimize.yaml  predictor.yaml
rnaflow/: __init__.py
rnaflow/data/: cell_types.py  codon_table.py  encoding.py  synthetic.py
rnaflow/embeddings/: ensemble.py  ribonn_wrapper.py
rnaflow/inversion/: gradient_decoder.py
rnaflow/models/: predictor.py
rnaflow/optim/: __init__.py  cem.py  diffusion.py  direct.py  flow_cem.py  objective.py
rnaflow/utils/: config.py
scripts/: extract_embeddings.py  optimize.py  train_predictor.py
tests/: test_combined.py  test_diffusion.py  test_direct.py  test_encoding.py  test_ensemble.py  test_flow_cem.py  test_gradient_decoder.py  test_predictor.py  test_ribonn_wrapper.py
